# tau-bench-extend

./: .env.example  .gitignore  README.md  generate_mock_results.py  pyproject.toml  run_adversarial.py  run_consistency.py  run_eval.py
docs/: STEP_BY_STEP.md  cold_email_clay_bavor.txt  loom_script.md
results/: ecommerce_claude-haiku-4-5-20251001_report.html  ecommerce_gpt-4o_report.html  healthcare_claude-haiku-4-5-20251001_report.html  healthcare_gpt-4o_report.html  insurance_claude-haiku-4-5-20251001_report.html  insurance_gpt-4o_report.html
tau_bench_extend/: __init__.py  run_eval.py
tau_bench_extend/core/: adversarial.py  agent_runner.py  consistency_scorer.py  models.py  reporter.py
tau_bench_extend/domains/: __init__.py
tau_bench_extend/domains/ecommerce/: tasks.py
tau_bench_extend/domains/healthcare/: tasks.py
tau_bench_extend/domains/insurance/: tasks.py
